Fix login button being invisible on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,6 +28,7 @@
 
 .contest-control {
     margin-top: 10px;
+    min-width: 100%;
 }
 
 .contest-name {
